index z-index issues fixed

--- a/assets/style/scss/_defaults.scss
+++ b/assets/style/scss/_defaults.scss
@@ -46,7 +46,7 @@ body {
     right: 0;
     bottom: 0;
     background-color: rgba(0, 0, 0, .75);
-    z-index: 20000000;
+    z-index: 0;
     display: none;
 }
 
